syntax = "proto3";

package user;

service UserGrpcService {
  rpc register (UserRegisterRequest) returns (UserRegisterResponse) {}
  rpc login (UserLoginRequest) returns (UserLoginResponse) {}
  rpc makeFriend (MakeFriendRequest) returns (MakeFriendResponse) {}
  rpc updateStatusMakeFriend (UpdateStatusRequest) returns (UpdateStatusResponse) {}
  rpc listFriends (ListFriendsRequest) returns (ListFriendsResponse) {}
  rpc detailMakeFriend (DetailMakeFriendRequest) returns (DetailMakeFriendResponse) {}
  rpc updateProfile (UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc getUserById (GetUserByIdRequest) returns (GetUserByIdResponse) {}
}


message UpdateProfileRequest {
  optional string fullName = 1;
  optional string bio = 2;
  

  optional bytes avatar = 3;

  optional string avatarFilename = 4;

  string userId = 5;
}

message UpdateProfileResponse {
  optional string fullName = 1;
  optional string bio = 2;

  // Trả về URL avatar mới
  optional string avatar = 3;
}

message UserRegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message UserRegisterResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}

message UserLoginResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  optional string avatar = 4;
  optional string bio = 5;
  string fullName = 6;
  string token = 7;
}

message MakeFriendRequest {
  string inviterId = 1;
  string inviteeEmail = 2;
  string inviterName = 3;
}

message MakeFriendResponse {
  string status = 1;
}

message UpdateStatusRequest {
  string inviteeId = 1;
  string status = 2;
  string inviterId = 3;
  string inviteeName = 4;
}

message UpdateStatusResponse {
  string status = 2;
}

message Friend {
  string id = 1;
  string email = 2;
  string username = 3;
  string avatar = 4;
  optional string fullName = 5;
}

message ListFriendsRequest {
  string userId = 1;
}

message ListFriendsResponse {
  repeated Friend friends = 1;
}

message DetailMakeFriendRequest {
  string friendRequestId = 1;
}

message FromUser {
  string email = 1;
  string username = 2;
  string avatar = 3;
  string id = 4;
  string fullName = 5;
}

message DetailMakeFriendResponse {
  string id = 1;
  FromUser fromUser = 2;
  string toUserId = 3;
  string status = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  string fullName = 1;
  string username = 2;
  string email = 3;
  string bio = 4;
  string avatar = 5;
}